src/objects/QPMS__Custom_Labels__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is to provide custom names for field labels and section labels</description>
    <fields>
        <fullName>QPMS__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Page_Name__c</fullName>
        <label>Page Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Section_Label__c</fullName>
        <label>Section Label</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Section_Name__c</fullName>
        <label>Section Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Lookup Filter</label>
    <listViews>
        <fullName>QPMS__All_Labels</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Field_Name__c</columns>
        <columns>QPMS__Object_Name__c</columns>
        <columns>QPMS__Filter_Value__c</columns>
        <columns>QPMS__Section_Name__c</columns>
        <columns>QPMS__Section_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_Labels</label>
        <language>en_US</language>
    </listViews>
</CustomObject>